# Sherlock

./: .gitignore  README.md  meson.build
.github/: FUNDING.yml
data/: Sherlock.appdata.xml.in  Sherlock.desktop.in  com.github.sergius02.sherlock.appdata.xml.in  com.github.sergius02.sherlock.desktop.in  meson.build
debian/: changelog  control  copyright
po/: POTFILES  com.github.sergius02.sherlock.pot  nl.po  ru.po
po/extra/: POTFILES  extra.pot  nl.po  ru.po
resources/: com.github.sergius02.sherlock.xml  meson.build
resources/css/: sherlock.css
resources/ui/: sherlock-dev.glade~  sherlock.glade  sherlock.glade~
src/: Application.vala  Main.vala  meson.build
src/model/: HTTPRequestHelper.vala  ResponseObject.vala
src/widgets/: Box.vala  DeviceIPBox.vala  HeaderBar.vala  SearchIPBox.vala  Window.vala
